botao-remover-funcionando
Versão com o botão remover funcionando, agora ele remove o valor selecionado no <select> e não o valor escrito

--- a/exercicios-javascript/Aula 15 - Variavéis Compostas/ex016/styles016.css
+++ b/exercicios-javascript/Aula 15 - Variavéis Compostas/ex016/styles016.css
@@ -35,4 +35,10 @@ input[type='button']{
     margin-right: 5px;
 }
 
+div#caixa_resultado{
+    display: flex;
+    align-items: flex-start;
+    gap: 5px;
+}
+
 
